# esplay-retro-emulation

./: .gitignore  .gitmodules  README.MD  esplay-retro-emu.fw  mkfw.exe.stackdump  mkrelease.sh  mkrelease_retro-esp32.sh  tile.raw
assets/: MenuTile.xcf  Tile.xcf  arrow.xcf  background.xcf  bright.xcf  gfxTile.xcf  img_assets.h  img_assets.xcf  include.inc  menu_bg.xcf  menu_gfx.xcf  reset_game.xcf  save_exit.xcf  save_state.xcf  save_without_exit.xcf  splash.h  splash.xcf  tile2.raw  title.xcf  volume.xcf
drivers/: Kconfig.projbuild
drivers/audio/: audio.c  audio.h
drivers/display/: disp_spi.c  display.c  display.h  ili9341.c  ili9341.h  ili9342.c  ili9342.h
drivers/system/: power.c  settings.c  settings.h
esplay-gnuboy/: Makefile  README.md  sdkconfig
esplay-gnuboy/main/: display_gb.c  display_gb.h  (+2 more)
esplay-hal/: audio.c  component.mk  gamepad.c  ili9341.c  power.c  settings.c
esplay-launcher/: Makefile  sdkconfig
esplay-nofrendo/: Makefile  README.MD  sdkconfig
esplay-sdk/: appfs
esplay-sdk/hal-drivers/: CMakeLists.txt  Kconfig.projbuild  gamepad.c  idf_component.yml  lcd.c  power.c  sdcard.c  settings.c
esplay-sdk/hal-drivers/include/: gamepad.h  lcd.h  power.h  sdcard.h  settings.h
esplay-smsplusgx/: Makefile  sdkconfig
launcher/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig
launcher/components/file_server/: CMakeLists.txt  component.mk  file_server.c  upload_script.html  upload_script.mini.html  uri_encode.c
launcher/components/file_server/include/: file_server.h  uri_encode.h
retro-esp32/: Makefile  partitions.csv  sdkconfig
(+1463 files in other folders)
